# FolderCleaner

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_foldercleaner.py
