[tool.poetry]
name = "FolderCleaner"
version = "0.1.0"
description = ""
authors = ["plesz <r.plesz@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
